2012-10-03  Joshua Bell  <jsbell@chromium.org>

        IndexedDB: Don't do full commit for empty transactions
        https://bugs.webkit.org/show_bug.cgi?id=89239

        Reviewed by Tony Chang.

        Don't bother creating a leveldb write batch if there's nothing in the transaction
        to commit. Note that a read-only transaction may still have index cleanup so may
        not be an empty transaction.

        This cuts the Lookup2 benchmark in http://reyesr.github.com/html5-storage-benchmark/
        from 70s to 2s.

        Covered by existing tests, e.g. storage/indexeddb/transaction-basics.html

        * platform/leveldb/LevelDBTransaction.cpp:
        (WebCore::LevelDBTransaction::commit):

2012-10-03  Adam Klein  <adamk@chromium.org>

        Remove bogus FIXME from Document.idl
        https://bugs.webkit.org/show_bug.cgi?id=98302

        Reviewed by Adam Barth.

        The FIXME claimed that document.body throwing an exception was not
        specced, but in fact it is:
        http://www.whatwg.org/specs/web-apps/current-work/multipage/dom.html#dom-document-body

        * dom/Document.idl:

2012-10-03  Joshua Bell  <jsbell@chromium.org>

        IndexedDB: Memory leak when deleting object stores with indexes
        https://bugs.webkit.org/show_bug.cgi?id=98292

        Reviewed by Tony Chang.

        Reference cycles between IDBObjectStore and IDBIndex instances are explicitly
        broken when the transaction completes (and the spec allows traversal to fail).
        Deleted stores need to have the reference cycle broken too.

        Caught by running valgrind over: storage/indexeddb/keypath-basics.html

        * Modules/indexeddb/IDBTransaction.cpp:
        (WebCore::IDBTransaction::objectStoreDeleted): Add store to set.
        (WebCore::IDBTransaction::dispatchEvent): Notify stores in set.
        * Modules/indexeddb/IDBTransaction.h: Add set of deleted stores.

2012-10-03  Adam Barth  <abarth@webkit.org>
